--- a/src/App.css
+++ b/src/App.css
@@ -172,3 +172,164 @@ body, .app {
   text-align: center;
   font-size: 0.8em;
 }
+
+.add-button {
+  position: absolute;
+  right: 100px;
+  top: 40px;
+  width: 56px;
+  height: 56px;
+  overflow: visible;
+  -webkit-transition: transform .4s cubic-bezier(.58,-0.37,.45,1.46),
+    color 0s ease .4s,font-size .2s;
+  -moz-transition: transform .4s cubic-bezier(.58,-0.37,.45,1.46),
+    color 0s ease .4s,font-size .2s;
+  transition: transform .4s cubic-bezier(.58,-0.37,.45,1.46),
+    color 0s ease .4s,font-size .2s;
+  text-align: center;
+  line-height: 56px;
+  font-size: 28px;
+  color: rgba(255,255,255,1);
+  z-index: 999;
+}
+
+.add-button:before {
+  position: relative;
+  z-index: 100;
+  content:"+";
+}
+
+
+
+.add-button:hover {
+  color: rgba(255,255,255,0);
+  transform: rotate(45deg);
+}
+
+.sub-button {
+  position: absolute;
+  display: inline-block;
+  background-color:#ff4081;
+  color: rgba(255,255,255,0);
+  width: 28px;
+  height: 28px;
+  line-height:48px;
+  font-family: "Arial";
+  font-size: 12px;
+  -webkit-transition: top .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    left .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    bottom .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    right .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    width .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    height .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    transform .1s ease 0s,
+    border-radius .2s  ease .2s;
+   -moz-transition: top .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    left .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    bottom .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    right .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    width .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    height .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    transform .1s ease 0s,
+    border-radius .2s  ease .2s;
+   transition: top .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    left .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    bottom .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    right .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    width .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    height .2s cubic-bezier(.58,-0.37,.45,1.46) .2s,
+    transform .1s ease 0s,
+    border-radius .2s  ease .2s;
+}
+
+.tl {
+  top: 0;
+  left: 0;
+  border-radius: 28px 0 0 0;
+  font-size: 12px;
+}
+
+.tr {
+  top: 0;
+  right: 0;
+  border-radius: 0 28px 0 0;
+  font-size: 12px;
+}
+
+.bl {
+  bottom: 0;
+  left: 0;
+  border-radius: 0 0 0 28px;
+  font-size: 12px;
+}
+
+.br {
+  bottom: 0;
+  right: 0;
+  border-radius: 0 0 28px 0;
+}
+
+.add-button:hover .sub-button {
+  width: 48px;
+  height: 48px;
+  transform: rotate(-45deg);
+
+  color: rgba(255,255,255,1);
+  -webkit-transition: top .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    left .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    bottom .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    right .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    width .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    height .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    color .3s ease .8s,
+    transform .3s ease .8s,
+    border-radius .4s  ease .6s;
+   -moz-transition: top .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    left .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    bottom .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    right .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    width .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    height .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    color .3s ease .8s,
+    transform .3s ease .8s,
+    border-radius .4s  ease .6s;
+   transition: top .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    left .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    bottom .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    right .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    width .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    height .4s cubic-bezier(.58,-0.37,.45,1.46) .4s,
+    color .3s ease .8s,
+    transform .3s ease .8s,
+    border-radius .4s  ease .6s;
+}
+
+.add-button:hover .tl {
+  top: -25px;
+  left: -25px;
+  border-radius: 28px;
+}
+
+.add-button:hover .tr {
+  top: -25px;
+  right: -25px;
+  border-radius: 28px;
+}
+
+.add-button:hover .bl {
+  bottom: -25px;
+  left: -25px;
+  border-radius: 28px;
+}
+
+.add-button:hover .br {
+  bottom: -25px;
+  right: -25px;
+  border-radius: 28px;
+}
+
+.selected {
+  color:#ff4081;
+  background-color: rgba(255,255,255,0);
+
+}
